Use Collections.singletonList instead of List.of (JDK9+)